--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@prisma/client": "^2.21.2",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.13.11"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
