--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
     "husky": "^6.0.0",
+    "postcss": "^8.2.12",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
     "prisma": "^2.21.2",
+    "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   },
   "husky": {
