--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
     "@prisma/client": "^2.21.2",
     "next": "10.1.3",
     "react": "17.0.2",
