--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "@prisma/client": "^2.21.2",
+    "@types/deep-equal": "^1.0.1",
+    "deep-equal": "^2.0.5",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.13.11"
+    "react-query": "^3.13.11",
+    "react-use": "^17.2.4",
+    "superjson": "^1.7.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
+    "babel-plugin-superjson-next": "^0.2.3",
     "husky": "^6.0.0",
     "postcss": "^8.2.12",
     "prettier": "2.2.1",
